--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -9,7 +9,12 @@ output:
 
 * [Matthew's initial observation on null, correlated data](voom_null.html)
 
-[Prof. Matthew Stephens](http://stephenslab.uchicago.edu/) did a quick investigation of the p values and z scores obtained for simulated null data (using just voom transform, no correction) from real RNA-seq data of [GTEx](http://www.gtexportal.org/home/).  Here is what he found.
+*All the results and plots presented in the pages below should be
+reproduceable on your computer. Follow the [setup
+instructions](setup.html) if you are interested in reproducing
+the results for yourself.*
+
+[Prof. Matthew Stephens](http://stephenslab.uchicago.edu) did a quick investigation of the p values and z scores obtained for simulated null data (using just voom transform, no correction) from real RNA-seq data of [GTEx](http://www.gtexportal.org/home).  Here is what he found.
 
 "I found something that I hadn’t realized, although is obvious in hindsight: although you sometimes see inflation under null of $p$-values/$z$-scores, the most extreme values are not inflated compared with expectations (and tend to be deflated). That is the histograms of $p$-values that show inflation near $0$ (and deflation near $1$) actually hide something different going on in the very left hand side near $0$.  The qq-plots are clearer… showing most extreme values are deflated, or not inflated.  This is expected under positive correlation i think.  For example, if all $z$-scores were the same (complete correlation), then most extreme of n would just be $N(0,1)$. but if independent the most extreme of n would have longer tails..."
 
@@ -17,7 +22,7 @@ Matthew's initial observation inspired this project.  If under positive correlat
 
 * [Occurrence of extreme observations](ExtremeOccurrence.html)
 
-As [Prof. Michael Stein](https://galton.uchicago.edu/~stein/) pointed during a conversation with Matthew, if the marginal distribution is correct then the expected number exceeding any threshold should be correct.  So if the tail is "usually"" deflated, it should be that with some small probability there are many large $z$-scores (even in the tail).  Therefore, if "on average" we have the right number of large $z$-scores/small $p$-values, and "usually" we have too few, then "rarely" we should have too many.  A simulation is run to check this intuition.
+As [Prof. Michael Stein](https://galton.uchicago.edu/~stein) pointed during a conversation with Matthew, if the marginal distribution is correct then the expected number exceeding any threshold should be correct.  So if the tail is "usually"" deflated, it should be that with some small probability there are many large $z$-scores (even in the tail).  Therefore, if "on average" we have the right number of large $z$-scores/small $p$-values, and "usually" we have too few, then "rarely" we should have too many.  A simulation is run to check this intuition.
 
 * [Two FWER-controlling procedures on correlated null](StepDown.html)
 
@@ -205,11 +210,3 @@ First public presentation of `CASH`.
 
 [`ashr`]: https://github.com/stephens999/ashr
 
-<!-- The goal of this new template is to simplify the setup and maintenance of a research website. -->
-<!-- Specifically, -->
-
-<!-- *  Easier to build and extend the website using the new tools in the [rmarkdown][] package and [latest RStudio release][rstudio] -->
-<!-- *  Easier to deploy the website with Git and GitHub by only using one branch -->
-
-<!-- [rmarkdown]: http://rmarkdown.rstudio.com/rmarkdown_websites.htm -->
-<!-- [rstudio]: https://www.rstudio.com/products/rstudio/download/preview/ -->
