Revised notes.txt, and made a few minor edits elsewhere.

--- a/analysis/index.Rmd
+++ b/analysis/index.Rmd
@@ -9,10 +9,10 @@ output:
 
 * [Matthew's initial observation on null, correlated data](voom_null.html)
 
-**Note:**  All the results and plots presented in the pages below should be
+**NOTE: All the results and plots presented in the pages below should be
 reproduceable on your computer. Follow the [setup
 instructions](setup.html) if you are interested in reproducing
-the results for yourself.
+the results for yourself.**
 
 [Prof. Matthew Stephens](http://stephenslab.uchicago.edu) did a quick investigation of the p values and z scores obtained for simulated null data (using just voom transform, no correction) from real RNA-seq data of [GTEx](http://www.gtexportal.org/home).  Here is what he found.
 
